--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -1,24 +1,18 @@
 <footer class="footer">
 	<div class="footer__wrapper">
-		<a class="logo logo--yellow footer__logo">Device</a>
-		<ul class="menu-user menu-user--footer">
-				<li><a href="" class="menu-user__link menu-user__link--footer menu-user__link--enter">Войти</a></li>
-				<li><a href="" class="menu-user__link menu-user__link--footer menu-user__link--compare">Сравнить</a></li>
-				<li><a href="" class="menu-user__link menu-user__link--footer menu-user__link--cart">Корзина</a></li>
-		</ul>
-		<address class="footer__adress">г. Москва, ул. Строителей, 15</address>
-		<ul class="menu-main menu-main--footer">
-			<li class="menu-main__item"><a class="menu-main__link menu-main__link--footer" href="">Доставка</a></li>
-			<li class="menu-main__item"><a class="menu-main__link menu-main__link--footer" href="">Гарантия</a></li>
-			<li class="menu-main__item"><a class="menu-main__link menu-main__link--footer" href="">Описание</a></li>
-		</ul>
-		<span class="footer__phone">Тел.: +7 (495) 495-95-95</span>
-		<p class="footer__social">
-			<b class="footer__social-title">Подпишитесь на новости!</b>
-			<a href="" class="footer__social-item footer__social-item--fb effect30-60-10">Фейсбук</a>
-			<a href="" class="footer__social-item footer__social-item--insta effect30-60-10">Инстаграмм</a>
-			<a href="" class="footer__social-item footer__social-item--twit effect30-60-10">Твиттер</a>
+		<p class="footer__contacts">
+			<b class="footer__contacts-name">Ирина Олейниченко</b> Персональный тренер <span class="footer__contacts-nowrap">по методике Пилатес</span><br>
+			<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 865-82-18</a>
 		</p>
-		<p class="footer__copyright">Разработано в <a class="footer__copyright__link" href="http://htmlacademy.ru">HTML Academy</a></p>
+		<p class="footer__social">
+			<span class="social">
+				<a href="" class="social__link social__link--vk">ВКОНТАКТЕ</a>
+				<a href="" class="social__link social__link--fb">Фейсбук</a>
+				<a href="" class="social__link social__link--in">Youtube</a>
+			</span>
+		</p>
+		<p class="footer__copyright">Разработано:
+			<a href="" class="footer__copyright-link btn-inclined-lines">INDAY</a>
+		</p>
 	</div>
 </footer>
