--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -1,2 +1,11 @@
 @import "mixins/pseudo.scss";
+@import "mixins/btn.scss";
+@import "mixins/container.scss";
+@import "mixins/vh.scss";
+@import "mixins/font.scss";
+@import "mixins/reset-ul.scss";
+@import "mixins/text-decor.scss";
+
+// @import "mixins/opacity-effect.scss";
+// @import "mixins/clearfix.scss";
 
