--- a/src/pug/partials/_test.pug
+++ b/src/pug/partials/_test.pug
@@ -1,12 +1,10 @@
 mixin header(param)
 	<header class="header">
 		<div class="header__wrapper">
-			- var h = "h2"
-			if param == 0
-				- h = "h1"
-			#{h}.header__logo
-				<span class="header__title">Персональный тренер по пилатесу Ирина Олейниченко</span><img src="img/logo.png" width="200" height="60" alt="Пилатес">
-			<nav class="header__nav main-nav main-nav--closed main-nav--nojs">
+			<h1 class="header__logo"><span class="header__title">Персональный тренер по пилатесу Ирина Олейниченко</span> 
+			<img src="img/logo.png" width="200" height="60" alt="Пилатес">
+			</h1>		
+			<nav class="main-nav main-nav--closed main-nav--nojs">
 				<button type="button" class="hamburger"></button>
 				<div class="main-nav__wrapper">
 				- 
@@ -14,14 +12,14 @@ mixin header(param)
 						{name: "Главная", link: "index.html"},
 						{name: "О тренере", link: "trainer.html"},
 						{name: "Услуги", link: "services.html"},
-						{name: "SlimProgramm", link: "slim-programm.html"},
-						{name: "Статьи", link: "previews.html"}
+						{name: "Статьи", link: "articles.html"}
 						];
 				ul.menu-main.menu-main--header
 					each item, index in menulist
 						if index == param
-							li.menu-main__item.menu-main__item--active
-								a.menu-main__link= item.name
+							li.menu-main__item
+								|
+								a.menu-main__link.menu-main__link--active= item.name
 						else
 							li.menu-main__item
 								a(href=item.link).menu-main__link= item.name
@@ -29,5 +27,3 @@ mixin header(param)
 			</nav>
 		</div>
 	</header>
-
-	
