--- a/src/sass/global/keyframes.scss
+++ b/src/sass/global/keyframes.scss
@@ -10,3 +10,9 @@
 //   10%, 30%, 50%, 70%, 90% {transform: translateX(-20px);}
 //   20%, 40%, 60%, 80% {transform: translateX(20px);}
 // }
+@keyframes flicker {
+	0% {transform: scale(1);}
+	// 25% {transform: scale(0.95);}
+	// 50% {transform: scale(1.05);}
+	100% {transform: scale(1.05);}
+}
