--- a/src/sass/global/scaffolding.scss
+++ b/src/sass/global/scaffolding.scss
@@ -1,13 +1,9 @@
 body {
   min-width: 320px; 
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 14px;
-  line-height: 1.7; 
-  font-weight: bold; 
-  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol  {
   margin: 0;
 }
 
@@ -17,10 +13,6 @@ input {
   text-transform: inherit;
   color: inherit;
   background-color: transparent;
-}
-
-p {
-  margin: 0;
 }
 
 a {
@@ -38,7 +30,90 @@ address {
 }
 
 /*Для проекта*/
+p, ol, ul {
+  @include font(14px, 20px);
+  margin-top: 15px; 
+  margin-bottom: 15px;  
+}
+
+h1 {
+  @include font-accent(24px, 30px);
+  margin-bottom: 35px;
+  margin-top: 15px;
+}
+
+h2 {
+  @include font-accent(20px, 25px);
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  @include font-accent(20px, 25px);
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
 
 
+// h1 24/30 30/35 36/45 
+// h2 20/25 24/30 28/35
+// h3 20/25 20/25 24/30 
+// h4             22/30
+// h5             20/25
+// h6             18/25
 
+// p  14/20 14/20 16/20 
+
+@media #{$tablet-width} {
+  h1 {
+    @include font-accent(28px, 35px);
+    margin-bottom: 35px;
+    margin-top: 0;
+  }
+
+  h2 {
+    @include font-accent(22px, 30px);
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+
+  h3 {
+    @include font-accent(20px, 25px);
+    margin-top: 25px;
+    margin-bottom: 20px;
+  }
+
+  p, ul, ol {
+    @include font(15px, 20px);  
+  }
+}
+
+@media #{$desktop-width} {
+  h1 {
+    @include font-accent(32px, 40px);
+    margin-bottom: 40px;
+  }
+
+  h2 {
+    @include font-accent(24px, 30px);
+      margin-top: 35px;
+      margin-bottom: 20px;
+  }
+
+  h3 {
+    @include font-accent(22px, 25px);
+  }
+
+  h4 { 
+    @include font-accent(22px, 30px);
+  }
+
+  h5 {
+    @include font-accent(20px, 25px);
+  }
+
+  p, ul, ol {
+    @include font(16px, 20px);  
+  }
+}
 
