--- a/src/sass/mixins/container.scss
+++ b/src/sass/mixins/container.scss
@@ -1,22 +1,10 @@
-@mixin container() {
-  width: 280px;
-  margin: 0 auto;
 
-  @media #{$tablet-width} {
-    width: 660px;
-  }
-
-  @media #{$desktop-width} {
-    width: 1040px;
-  }
-}
-
-@mixin container-fluid {
+@mixin container {
   // width: auto;
 
   // @media ($tablet-width) {
-    width: 87%;
-    max-width: 1160px;
+    width: 90%;
+    max-width: $width-max;
     margin: 0 auto;
   // }
 }
