--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -5,6 +5,7 @@
 @import "mixins/font.scss";
 @import "mixins/reset-ul.scss";
 @import "mixins/text-decor.scss";
+@import "mixins/clearfix.scss";
 
 // @import "mixins/opacity-effect.scss";
 // @import "mixins/clearfix.scss";
