--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,8 @@
 @import "blocks/blocks.scss";
 @import "blocks/previews.scss";
 @import "blocks/preview.scss";
+@import "blocks/form.scss";
+@import "blocks/feedback.scss";
 
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
