--- a/src/sass/global/scaffolding.scss
+++ b/src/sass/global/scaffolding.scss
@@ -29,6 +29,10 @@ address {
   font-style: normal;
 }
 
+.clearfix {
+  @include clearfix;
+}
+
 /*Для проекта*/
 p, ol, ul {
   @include font(14px, 20px);
@@ -54,17 +58,25 @@ h3 {
   margin-bottom: 20px;
 }
 
+h4 {
+   @include font-accent(18px, 20px);
+    
+}
 
-// h1 24/30 30/35 36/45 
-// h2 20/25 24/30 28/35
-// h3 20/25 20/25 24/30 
-// h4             22/30
+// h1 24/30 28/35 32/40
+// h2 20/25 22/30 24/30
+// h3 20/25 24/30 22/25
+// h4 18/20 18/20 20/25
 // h5             20/25
 // h6             18/25
 
 // p  14/20 14/20 16/20 
 
 @media #{$tablet-width} {
+  p, ul, ol {
+    @include font(15px, 20px);  
+  }
+
   h1 {
     @include font-accent(28px, 35px);
     margin-bottom: 35px;
@@ -82,13 +94,19 @@ h3 {
     margin-top: 25px;
     margin-bottom: 20px;
   }
-
-  p, ul, ol {
-    @include font(15px, 20px);  
+    
+  h4 {
+   // @include font-accent(20px, 25px);
   }
+
 }
 
 @media #{$desktop-width} {
+
+  p, ul, ol {
+    @include font(16px, 20px);  
+  }
+  
   h1 {
     @include font-accent(32px, 40px);
     margin-bottom: 40px;
@@ -96,24 +114,20 @@ h3 {
 
   h2 {
     @include font-accent(24px, 30px);
-      margin-top: 35px;
-      margin-bottom: 20px;
+    margin-top: 35px;
+    margin-bottom: 20px;
   }
 
   h3 {
     @include font-accent(22px, 25px);
   }
 
-  h4 { 
-    @include font-accent(22px, 30px);
-  }
+  // h4 { 
+  //   @include font-accent(20px, 20px);
+  // }
 
   h5 {
     @include font-accent(20px, 25px);
-  }
-
-  p, ul, ol {
-    @include font(16px, 20px);  
   }
 }
 
