--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -11,8 +11,8 @@
 				<a href="" class="social__link social__link--in">Youtube</a>
 			</span>
 		</p>
-		<p class="footer__copyright">Разработано:
-			<a href="" class="footer__copyright-link btn-inclined-lines">INDAY</a>
+		<p class="footer__copyright">
+			<a href="feedback.html#letter" class="footer__copyright-link btn-inclined-lines">Обратная связь</a>
 		</p>
 	</div>
 </footer>
