--- a/src/pug/services.pug
+++ b/src/pug/services.pug
@@ -31,7 +31,7 @@
 					</div>
 					<div class="content__block grid__block">
 						<p>Стоимость персональной тренировки <i>400 грн</i> (60 мин). Приобретая абонемент на 8 занятий вы экономите 400 грн. Я уверяю вас, что 34 упражнения Джозефа Пилатеса, при должном усердии, способны сотворить чудо. Заказывайте первую тренировку!</p>
-						<p><a href="feedback.htm" class="content__btn btn-inclined-lines btn-inclined-lines--white">Заказать тренировку</a></p>
+						<p><a href="feedback.html#training" class="content__btn btn-inclined-lines btn-inclined-lines--white">Заказать тренировку</a></p>
 					</div>
 				</div>
 			</div>
