--- a/src/pug/texts/_slim-programm.pug
+++ b/src/pug/texts/_slim-programm.pug
@@ -1,6 +1,6 @@
 <h3>Как похудеть наверняка и надолго?</h3>
 <h1>Пилатес упражнения в авторской методике для женщин „Осознанное избавление от лишнего веса“</h1>
-<p>За 14 лет опыта персональных тренировок, выработала методику, которая позволяет гарантировано добиться результата в, кажущейся многим, такой непосильной задаче по обретению стройной, подтянутой фигуры. Все ее выводы проверены и отточены в индивидуальной работе с десятками клиентов.</p>
+<p>За 14 лет опыта персональных тренировок, я выработала методику, которая позволяет гарантировано добиться результата в, кажущейся многим, такой непосильной задаче по обретению стройной, подтянутой фигуры. Все ее выводы проверены и отточены в индивидуальной работе с десятками клиентов.</p>
 <p>Уверена, что вами уже наверняка предпринимались какие-то шаги в направлении похудения и, возможно, даже вполне успешные, в том плане, что вес вы действительно потеряли, но</p>
 <ul>
 <li>или же не столько, как хотелось,</li>
@@ -48,7 +48,7 @@
 <li>сильной мотивации.</li>
 </ul>
 <p>Именно эти факторы я предлагаю вам получить от меня. Укажите свой email и я вышлю более детально расписанную методику и программы тренировок</p>
-<p><a href="feedback.htm" class="article__btn btn-inclined-lines btn-inclined-lines--white">Получить методику</a></p>
+<p><a href="feedback.html#slimprogramm" class="article__btn btn-inclined-lines btn-inclined-lines--white">Получить методику</a></p>
 <blockquote class="blockquote">
 <p><span class="blockquote__quotes blockquote__quotes--screamer">Ваша</span> фигура в ваших руках и зависит сейчас только от решительности!</p>
 </blockquote>
