--- a/src/sass/blocks/menu-main.scss
+++ b/src/sass/blocks/menu-main.scss
@@ -34,6 +34,7 @@
   .menu-main {
     display: flex;
     justify-content: space-between;  
+    background-color: transparent;
   }
 
   .menu-main--header {
