--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,9 +2,8 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Персональный тренер по пилатесу</title>
-	<meta name="description" content="Пилатес в Киеве от одного из лучших тренеров Украины. Начните знакомство с pilates методикой под руководством профессионала">
-
+	<title>Персональный тренер по пилатесу в Киеве</title>
+	<meta name="description" content="Пилатес в Киеве от одного из лучших тренеров Украины. Начните заниматься pilates методикой индивидуально с персональным тренером по пилатесу">
 	include partials/_page_head.pug
 </head>
 <body>
@@ -34,7 +33,7 @@
 					</div>
 					<div class="content__block grid__block">
 						<p>Для меня пилатес - одно из основных занятий в жизни. Я люблю эту методику и искренне рекомендую вам узнать ее огромные преимущества над другими техниками.</p>
-						<p>Обязательно зайдите в раздел Пилатес, что это? и узнайте все об упражнениях от которых в восторге миллионы людей в мире!</p>
+						<p><a href="feedback.html#training" class="content__btn btn-inclined-lines btn-inclined-lines--white">Заказать тренировку</a></p>
 					</div>
 				</div>
 			</div>
