--- a/src/pug/main-principles.pug
+++ b/src/pug/main-principles.pug
@@ -2,18 +2,17 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Прграмма по похудения с помощью методики Пилатеса</title>
+	<title>Основные принципы пилатеса</title>
 	<meta name="description" content="">
-
 	include partials/_page_head.pug
 </head>
 <body>
 	include partials/_header.pug
-	+header(3)
+	+header(4)
 	<main class="main main--bg-pink">
 		<div class="substrate">
 			<article class="substrate__content article">
-			include texts/_slim-programm.pug
+			include texts/_main-principles.pug
 			</article>
 		</div>
 	</main>
