--- a/src/pug/previews.pug
+++ b/src/pug/previews.pug
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Персональный тренер по пилатесу</title>
+	<title>Статьи о методике пилатес</title>
 	<meta name="description" content="Пилатес в Киеве от одного из лучших тренеров Украины. Начните знакомство с pilates методикой под руководством профессионала">
 
 	include partials/_page_head.pug
@@ -17,11 +17,14 @@
 				include partials/_preview.pug
 				-
 					var previewsItem = [
-						{title: "Упражнения для живота от Джозефа Пилатеса", link: "stomack.html", photo: "img/exercise-legs-1x.png", text: "И чтобы начать с чего-то наверняка действующего, я предлагаю cделать первый шаг, сам по себе  способный решить всю проблему в самом корне - перестаньте"},
-						{title: "Что такое пилатес упражнения и чем они полезны?", photo: "img/exercise-legs-1x.png", link: "stomack.html", text: "Пилатес – это метод управления телом созданный удивительным человеком – Джозефом Пилатесом. Очень часто причиной многих заболеваний является неправильная осанка или мышечный дисбаланс. Так вот пилатес идеально формирует мышечный корсет с огромным количеством замечательных последствий. "},
-						{title: "Система пилатес: когда и на какие результаты мне рассчитывать?", photo: "img/exercise-legs-1x.png", link: "stomack.html", text: "Увеличение гибкости, подвижности суставов, исправление плохой осанки. Тело приобретает способность двигаться удивительно грациозно."},
-						{title: "Пилатес отзывы и ответы на часто задаваемые вопросы", photo: "img/exercise-knees-1x.png", link: "stomack.html", text: "Самое главное в занятиях пилатесом – это постоянство и самое лучше средство помощи в этом - истории людей добившихся реальных результатов"},
-						{title: "Гимнастика Пилатес. Принципы без которых ничего не получиться", photo: "img/exercise-legs-1x.png", link: "stomack.html", text: "Анатомический фундамент метода Пилатеса тесно связан с центром тяжести тела и, следовательно, осанкой. Восемь взаимосвязанных принципов, на которых этот метод строится, легко адаптируются к любому возрасту и типу тела."}
+						{title: "Что такое пилатес?", link: "what-is-pilates.html", photo: "img/exercise-legs-1x.png", text: "Что такое пилатес знать обязательно поскольку  сегодня он просто безумно популярен. Вдумайтесь, в США работает около 1600 студий, в Англии  более 500, в 2003 году в Москве появился Первый Институт Пилатеса"},
+						{title: "Нужен ли мне пилатес?", photo: "img/exercise-hands-1x.png", link: "do-i-need-pilates.html", text: "Обычно новичку я предлагаю несколько вариантов упражнений, из которых он может выбрать то, что ему по силам на данный момент. К сложным упражнениям я подвожу постепенно, пока занимающийся не будет полностью уверен в том, что "},
+						{title: "Болят ноги? Безнадежных больных нет!", photo: "img/exercise-knees-1x.png", link: "bad-legs.html", text: "Обычно люди начинают бежать в спортзал. Но тренажеры прокачивают поверхностные группы мышц, а мышечная система человеческого тела состоит не только из внешнего но также из внутреннего слоя. Поэтому"},
+						{title: "На что можно расчитывать?", photo: "img/exercise-knees-1x.png", link: "what-to-expect.html", text: "Избавление от болей в спине. Укрепление «центральных» мышц туловища, изменение длины мышц, восстановление баланса, расслабление тела и выработка правильной осанки – все это, сочетаясь, делает данный метод чрезвычайно эффективным средством профилактики болезней спины"},
+						{title: "Пилатес для чайников - история создания", photo: "img/exercise-legs-1x.png", link: "pilates-for-dummies.html", text: "В детстве он страдал астмой и рахитом. Но благодаря силе воли и желанию превозмочь недуги, мальчик начинает упорно тренироваться, и уже к 14 годам достигает невероятных результатов. Джозеф буквально создал тело атлета."},
+						{title: "Пилатес для похудения: когда это возможно?", photo: "img/exercise-legs-1x.png", link: "slim-programm.html", text: "За 14 лет опыта персональных тренировок, я выработала методику, которая позволяет гарантировано добиться результата в, кажущейся многим, такой непосильной задаче по обретению стройной, подтянутой фигуры. "},
+						{title: "Как похудеть с пилатесом?", photo: "img/exercise-knees-1x.png", link: "stomack.html", text: "Прежде чем начать работать с телом, принципиально важно понимать, что оно хочет быть упитанным не для того чтобы наказать вас или причинить боль. Организм накапливает жир только потому, что по какой-то причине считает, что это в ваших интересах."},
+						{title: "Главные принципы пилатеса", photo: "img/exercise-up-1x.png", link: "main-principles.html", text: "Анатомический фундамент метода Пилатеса тесно связан с центром тяжести тела и, следовательно, осанкой. Восемь взаимосвязанных принципов, на которых этот метод строится, легко адаптируются к любому возрасту и типу тела. "}
 						];
 				each item in previewsItem
 					+preview(item.title, item.link, item.photo, item.text)
