--- a/src/pug/stomack.pug
+++ b/src/pug/stomack.pug
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Персональный тренер по пилатесу</title>
+	<title>Как убрать живот и бока быстро. Упражнения для живота от Джозефа Пилатеса</title>
 	<meta name="description" content="">
 
 	include partials/_page_head.pug
