--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -50,13 +50,10 @@
 }
 
 .footer__copyright-link {
-	width: 150px;
+	width: 250px;
 
   margin: 0 auto;
   margin-top: 8px;
-
-	@include font-accent(18px, 20px, normal, #000, 2px);
-  text-transform: uppercase;
 }
 
 @media #{$tablet-width} {
@@ -71,6 +68,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
+		align-items: center;
 	}
 	
 	.footer__contacts {
@@ -125,7 +123,7 @@
 	}
 
 	.footer__copyright {
-		width: 160px;
+		width: 220px;
 		
 		margin: 0;
 
