update social and make documents

--- a/src/pug/texts/_slim-programm.pug
+++ b/src/pug/texts/_slim-programm.pug
@@ -32,8 +32,7 @@
 <h2>Какие средства я использую для похудения?</h2>
 <ul>
 <li>упражнения пилатес, выполняемые с мельчайшими ньюансами,</li>
-<li>специальная музыка известного медико-биологического института, устраняющая психологические причины, приводящие к избыточному весу,</li>
-<li>cамые действенные правила питания, на основании разработок Галины Гроссман,</li>
+<li>cамые действенные правила питания, на основании разработок современных диетологов,</li>
 <li>множество мотивационных фишек, из которых самая главная, это ежедневное фиксирование достигнутых результатов.</li>
 </ul>
 <p>Как правило, достаточно 7-10 индивидуальных тренировок (я приезжаю к вам), чтобы передать основу системы и дальше самостоятельно и максимально уверенно идти к состоянию стройности в теле и легкости в мыслях.</p>
