--- a/src/pug/services.pug
+++ b/src/pug/services.pug
@@ -30,13 +30,13 @@
 						<img src="img/exercise-legs-1x.png" alt="">
 					</div>
 					<div class="content__block grid__block">
-						<p>Стоимость персональной тренировки <i>400 грн</i> (60 мин). Приобретая абонемент на 8 занятий вы экономите 400 грн. Я уверяю вас, что 34 упражнения Джозефа Пилатеса, при должном усердии, способны сотворить чудо. Заказывайте первую тренировку!</p>
+						<p>Я предлагаю: занятия онлайн, индивидуальные тренировки для женщин на вашей территории и корпоративные занятия. Стоимость тренировки вживую <i>800 грн </i> (45 мин), онлайн – цена договорная. Уверяю вас - 34 упражнения Джозефа Пилатеса, при должном усердии, способны сотворить чудо.</p>
 						<p><a href="feedback.html#training" class="content__btn btn-inclined-lines btn-inclined-lines--white">Заказать тренировку</a></p>
 					</div>
 				</div>
 			</div>
 		</section>
-		include partials/_blocks.pug		
+		include partials/_blocks.pug
 	</main>
 	include partials/_footer.pug
 	include partials/_page_bottom.pug
