--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/preview.scss";
 @import "blocks/form.scss";
 @import "blocks/feedback.scss";
+@import "blocks/documents.scss";
 
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
